# openproject-mcp-server

./: .fastmcp.yaml  .gitignore  README.md  openproject-mcp-fastmcp.py  openproject-mcp-http.py  openproject-mcp-sse.py  openproject-mcp.py  pyproject.toml
scripts/: install_mcp_claude.ps1  install_mcp_cursor.sh
src/: __init__.py  auth.py  client.py  server.py
src/tools/: __init__.py  connection.py  hierarchy.py  memberships.py  news.py  projects.py  relations.py  time_entries.py  users.py  versions.py  weekly_reports.py  work_packages.py  work_packages_bulk.py
src/utils/: __init__.py  bulk_operations.py  formatting.py  report_formatter.py  retry_helper.py
tests/: test_bulk_create_work_packages.py  test_bulk_operations.py  test_news_integration.py  test_news_tools.py  test_tools.py
